@@ -1,3 +1,7 @@
+2001-09-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Add CONFIRM_MAX_MESSAGE_SIZE.
+
 2001-08-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda.spec: Raise version number to 0.35.
