@@ -1,3 +1,9 @@
+2001-09-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (CONFIRM_MAX_MESSAGE_SIZE): New variable that
+	specifies the maximum size the a message can be before its body is
+	excluded from the confirmation request/acceptance notices.
+
 2001-09-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (TMDA_HOMEPAGE): Use sf.net instead of
